--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router": "^7.0.1"
   },
   "devDependencies": {
