--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-router": "^7.0.1"
   },
   "devDependencies": {
